[package]
name = "maps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.25"
freetype-rs = "0.34.0"
gl = "0.14.0"
glfw = "0.51.0"
image = "0.24.5"
robust = "1.0.0"

[dev-dependencies]
criterion = "0.3"

[profile.bench]
debug = true

[[bench]]
name = "tiles"
harness = false
